--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-simple-star-rating": "^4.0.5",
     "react-simple-tree-menu": "^1.1.18",
     "react-toastify": "^9.0.8",
+    "react-tooltip": "^5.7.5",
     "react-transition-group": "^4.4.2",
     "react-treebeard": "^3.2.4",
     "react-youtube": "^8.2.1",
