added site signup, checkout, and order history features

--- a/backend/.env
+++ b/backend/.env
@@ -16,3 +16,8 @@ JWT_SECRET=GRSSECRET
 NODE_ENV=production
 
 TEST_STRING=testWolf
+
+# nodemailer variables sales@germainers.com
+EMAIL_HOST = 'smtp.zoho.com'
+EMAIL_USER = 'sales@germainers.com'
+EMAIL_PASS = 'Germaine1131!'
