--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "proxy": "http://localhost:5000",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.7.1",
