--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postcss-normalize": "^10.0.1",
     "react": "^17.0.2",
     "react-alerts-plus": "^1.0.0",
+    "react-carousel-minimal": "^1.4.1",
     "react-collapsible": "^2.8.4",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
