--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^6.4.1",
     "neumorphism-react": "^1.1.1",
     "node-sass": "^7.0.0",
+    "nodemailer": "^6.9.13",
     "patch-package": "^6.4.7",
     "popper.js": "^1.16.1",
     "postcss-normalize": "^10.0.1",
